--- a/Hell2025/Hell2025/Hell2025.vcxproj
+++ b/Hell2025/Hell2025/Hell2025.vcxproj
@@ -210,7 +210,8 @@ copy /Y "$(ProjectDir)vendor\DLLs\PVDRuntime_64.dll" "$(TargetDir)PVDRuntime_64.
     <ClCompile Include="src\Imgui\Types\Types.cpp" />
     <ClCompile Include="src\File\File_height_map.cpp" />
     <ClCompile Include="src\Math\AABB.cpp" />
-    <ClCompile Include="src\Types\WallSegment.cpp" />
+    <ClCompile Include="src\Types\House\Trim.cpp" />
+    <ClCompile Include="src\Types\House\WallSegment.cpp" />
     <ClCompile Include="src\Physics\Physics_debug.cpp" />
     <ClCompile Include="src\Physics\Physics_rigids_dynamics.cpp" />
     <ClCompile Include="src\Physics\Physics_heightfields.cpp" />
@@ -222,12 +223,13 @@ copy /Y "$(ProjectDir)vendor\DLLs\PVDRuntime_64.dll" "$(TargetDir)PVDRuntime_64.
     <ClCompile Include="src\Player\Player_util.cpp" />
     <ClCompile Include="src\Renderer\Types\TextureArray.cpp" />
     <ClCompile Include="src\Types\Decal.cpp" />
-    <ClCompile Include="src\Types\Door.cpp" />
-    <ClCompile Include="src\Types\HousePlane.cpp" />
+    <ClCompile Include="src\Types\House\Door.cpp" />
+    <ClCompile Include="src\Types\House\HousePlane.cpp" />
     <ClCompile Include="src\Types\PickUp.cpp" />
     <ClCompile Include="src\Types\Tree.cpp" />
-    <ClCompile Include="src\Types\Wall.cpp" />
-    <ClCompile Include="src\Types\Window.cpp" />
+    <ClCompile Include="src\Types\House\Wall.cpp" />
+    <ClCompile Include="src\Types\House\Window.cpp" />
+    <ClCompile Include="src\Util\Util_black_magic.cpp" />
     <ClCompile Include="src\Util\Util_debug_info.cpp" />
     <ClCompile Include="src\World\HeightMapManager.cpp" />
     <ClCompile Include="src\Physics\Physics.cpp" />
@@ -433,19 +435,21 @@ copy /Y "$(ProjectDir)vendor\DLLs\PVDRuntime_64.dll" "$(TargetDir)PVDRuntime_64.
     <ClInclude Include="src\Imgui\EditorImgui.h" />
     <ClInclude Include="src\Imgui\Types\Types.h" />
     <ClInclude Include="src\Math\AABB.h" />
-    <ClInclude Include="src\Types\WallSegment.h" />
+    <ClInclude Include="src\Physics\CollisionReports.h" />
+    <ClInclude Include="src\Types\House\Trim.h" />
+    <ClInclude Include="src\Types\House\WallSegment.h" />
     <ClInclude Include="src\Physics\Types\HeightField.h" />
     <ClInclude Include="src\Physics\Types\RigidDynamic.h" />
     <ClInclude Include="src\Physics\Types\RigidStatic.h" />
     <ClInclude Include="src\Renderer\Types\TextureArray.h" />
     <ClInclude Include="src\Types\Bullet.h" />
     <ClInclude Include="src\Types\Decal.h" />
-    <ClInclude Include="src\Types\Door.h" />
-    <ClInclude Include="src\Types\HousePlane.h" />
+    <ClInclude Include="src\Types\House\Door.h" />
+    <ClInclude Include="src\Types\House\HousePlane.h" />
     <ClInclude Include="src\Types\PickUp.h" />
     <ClInclude Include="src\Types\Tree.h" />
-    <ClInclude Include="src\Types\Wall.h" />
-    <ClInclude Include="src\Types\Window.h" />
+    <ClInclude Include="src\Types\House\Wall.h" />
+    <ClInclude Include="src\Types\House\Window.h" />
     <ClInclude Include="src\World\HeightMapManager.h" />
     <ClInclude Include="src\Physics\Physics.h" />
     <ClInclude Include="src\Renderer\Types\GrassMesh.h" />
