water wip backup

--- a/Hell2025/Hell2025/Hell2025.vcxproj
+++ b/Hell2025/Hell2025/Hell2025.vcxproj
@@ -137,11 +137,13 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
   <ItemGroup>
     <ClCompile Include="src\API\OpenGL\GL_backend.cpp" />
     <ClCompile Include="src\API\OpenGL\GL_util.cpp" />
+    <ClCompile Include="src\API\OpenGL\Renderer\ComputePasses\GL_compute_ftt.cpp" />
     <ClCompile Include="src\API\OpenGL\Renderer\ComputePasses\GL_compute_skinning.cpp" />
     <ClCompile Include="src\API\OpenGL\Renderer\GL_renderer.cpp" />
     <ClCompile Include="src\API\OpenGL\Renderer\GL_renderer_util.cpp" />
     <ClCompile Include="src\API\OpenGL\Renderer\RenderPasses\GL_decal_pass.cpp" />
     <ClCompile Include="src\API\OpenGL\Renderer\RenderPasses\GL_glass_pass.cpp" />
+    <ClCompile Include="src\API\OpenGL\Renderer\RenderPasses\GL_ocean_pass.cpp" />
     <ClCompile Include="src\API\OpenGL\Renderer\RenderPasses\GL_winston_pass.cpp" />
     <ClCompile Include="src\API\OpenGL\Renderer\Utility\GL_height_map_utility.cpp" />
     <ClCompile Include="src\API\OpenGL\Renderer\RenderPasses\GL_debug_pass.cpp" />
@@ -165,6 +167,7 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
     <ClCompile Include="src\API\OpenGL\Types\GL_framebuffer.cpp" />
     <ClCompile Include="src\API\OpenGL\Types\GL_heightmap_mesh.cpp" />
     <ClCompile Include="src\API\OpenGL\Types\GL_mesh_buffer.cpp" />
+    <ClCompile Include="src\API\OpenGL\Types\GL_mesh_patch.cpp" />
     <ClCompile Include="src\API\OpenGL\Types\GL_shader.cpp" />
     <ClCompile Include="src\API\OpenGL\Types\GL_shadow_map_array.cpp" />
     <ClCompile Include="src\API\OpenGL\Types\GL_shadow_map.cpp" />
@@ -230,6 +233,11 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
     <ClCompile Include="src\Imgui\Types\Types.cpp" />
     <ClCompile Include="src\File\File_height_map.cpp" />
     <ClCompile Include="src\Math\AABB.cpp" />
+    <ClCompile Include="src\Ocean\FFTSolver.cpp" />
+    <ClCompile Include="src\Ocean\GLFFT\glfft.cpp" />
+    <ClCompile Include="src\Ocean\GLFFT\glfft_gl_interface.cpp" />
+    <ClCompile Include="src\Ocean\GLFFT\glfft_wisdom.cpp" />
+    <ClCompile Include="src\Ocean\Ocean.cpp" />
     <ClCompile Include="src\Player\Player_piano.cpp" />
     <ClCompile Include="src\Types\Game\BasicDoor.cpp" />
     <ClCompile Include="src\Types\Misc\Piano.cpp" />
@@ -396,6 +404,7 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
     <None Include="res\shaders\OpenGL\GL_heightmap_physx_texture_generation.comp" />
     <None Include="res\shaders\OpenGL\GL_lighting.comp" />
     <None Include="res\shaders\OpenGL\GL_light_culling.comp" />
+    <None Include="res\shaders\OpenGL\GL_ocean_composite.comp" />
     <None Include="res\shaders\OpenGL\GL_outline.frag" />
     <None Include="res\shaders\OpenGL\GL_outline.vert" />
     <None Include="res\shaders\OpenGL\GL_shadow_cube_map.frag" />
@@ -431,6 +440,7 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
     <ClInclude Include="src\API\OpenGL\Types\GL_indirectBuffer.hpp" />
     <ClInclude Include="src\API\OpenGL\Types\GL_mesh2D.hpp" />
     <ClInclude Include="src\API\OpenGL\Types\GL_frameBuffer.h" />
+    <ClInclude Include="src\API\OpenGL\Types\GL_mesh_patch.h" />
     <ClInclude Include="src\API\OpenGL\Types\GL_pbo.hpp" />
     <ClInclude Include="src\API\OpenGL\Types\GL_shader.h" />
     <ClInclude Include="src\API\OpenGL\Types\GL_shadow_map_array.h" />
@@ -477,6 +487,14 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
     <ClInclude Include="src\Imgui\EditorImgui.h" />
     <ClInclude Include="src\Imgui\Types\Types.h" />
     <ClInclude Include="src\Math\AABB.h" />
+    <ClInclude Include="src\Ocean\FFTSolver.h" />
+    <ClInclude Include="src\Ocean\GLFFT\glfft.hpp" />
+    <ClInclude Include="src\Ocean\GLFFT\glfft_common.hpp" />
+    <ClInclude Include="src\Ocean\GLFFT\glfft_gl_api_headers.hpp" />
+    <ClInclude Include="src\Ocean\GLFFT\glfft_gl_interface.hpp" />
+    <ClInclude Include="src\Ocean\GLFFT\glfft_interface.hpp" />
+    <ClInclude Include="src\Ocean\GLFFT\glfft_wisdom.hpp" />
+    <ClInclude Include="src\Ocean\Ocean.h" />
     <ClInclude Include="src\Physics\CollisionReports.h" />
     <ClInclude Include="src\Types\Game\BasicDoor.h" />
     <ClInclude Include="src\Types\Misc\Piano.h" />
