procedual weatherboards working mostly good

--- a/Hell2025/Hell2025/Hell2025.vcxproj
+++ b/Hell2025/Hell2025/Hell2025.vcxproj
@@ -244,6 +244,7 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
     <ClCompile Include="src\Types\Game\BasicDoor.cpp" />
     <ClCompile Include="src\Types\House\WeatherBoards.cpp" />
     <ClCompile Include="src\Types\Misc\Piano.cpp" />
+    <ClCompile Include="src\Types\Misc\PictureFrame.cpp" />
     <ClCompile Include="src\Types\Renderer\Mesh.cpp" />
     <ClCompile Include="src\Types\Renderer\MeshBuffer.cpp" />
     <ClCompile Include="src\Types\Renderer\MeshNodes.cpp" />
@@ -517,6 +518,7 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
     <ClInclude Include="src\Types\Game\BasicDoor.h" />
     <ClInclude Include="src\Types\House\WeatherBoards.h" />
     <ClInclude Include="src\Types\Misc\Piano.h" />
+    <ClInclude Include="src\Types\Misc\PictureFrame.h" />
     <ClInclude Include="src\Types\Renderer\Mesh.h" />
     <ClInclude Include="src\Types\Renderer\MeshNodes.h" />
     <ClInclude Include="src\Types\Renderer\Model.h" />
