--- a/Hell2025/Hell2025/Hell2025.vcxproj
+++ b/Hell2025/Hell2025/Hell2025.vcxproj
@@ -218,6 +218,7 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
     <ClCompile Include="src\Editor\Editors\Editor_sector.cpp" />
     <ClCompile Include="src\Editor\Editors\House\Editor_wall_placement.cpp" />
     <ClCompile Include="src\Editor\Editor_objects.cpp" />
+    <ClCompile Include="src\Enemies\Shark\Shark.cpp" />
     <ClCompile Include="src\File\File_debug.cpp" />
     <ClCompile Include="src\File\File_bvh.cpp" />
     <ClCompile Include="src\Bvh\Bvh.cpp" />
@@ -496,6 +497,7 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
     <ClInclude Include="src\Callbacks\Callbacks.h" />
     <ClInclude Include="src\Common\UniqueID.h" />
     <ClInclude Include="src\Bvh\Bvh.h" />
+    <ClInclude Include="src\Enemies\Shark\Shark.h" />
     <ClInclude Include="src\Handlers\OpenHandler.h" />
     <ClInclude Include="src\Modelling\Clipping.h" />
     <ClInclude Include="src\Modelling\Types\ClippingCube.h" />
