--- a/Hell2025/Hell2025/Hell2025.vcxproj
+++ b/Hell2025/Hell2025/Hell2025.vcxproj
@@ -297,10 +297,16 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
     <ClCompile Include="src\Editor\Editor_objects.cpp" />
     <ClCompile Include="src\Editor\ObjectPlacement\Editor_object_placement.cpp" />
     <ClCompile Include="src\Editor\ObjectPlacement\Editor_window_placement.cpp" />
-    <ClCompile Include="src\Game\AStarMap.cpp" />
+    <ClCompile Include="src\Pathfinding\AStarMap.cpp" />
+    <ClCompile Include="src\Game\Enemies\Kangaroo\Kanagaroo_Movement.cpp" />
     <ClCompile Include="src\Game\Enemies\Kangaroo\Kangaroo.cpp" />
+    <ClCompile Include="src\Game\Enemies\Kangaroo\Kangaroo_Util.cpp" />
     <ClCompile Include="src\Game\Enemies\Shark\Shark_Update_HuntingPlayer.cpp" />
     <ClCompile Include="src\Game\Enemies\Shark\Shark_util.cpp" />
+    <ClCompile Include="src\Pathfinding\AStar.cpp" />
+    <ClCompile Include="src\Pathfinding\Cell.cpp" />
+    <ClCompile Include="src\Pathfinding\MinHeap.cpp" />
+    <ClCompile Include="src\Pathfinding\Pathfinding.cpp" />
     <ClCompile Include="src\Physics\Physics_callbacks.cpp" />
     <ClCompile Include="src\Physics\Physics_ignore_lists.cpp" />
     <ClCompile Include="src\Player\Player_character_model.cpp" />
@@ -602,8 +608,12 @@ xcopy /Y /I "$(ProjectDir)vendor\DLLs\*.dll" "$(TargetDir)"
     <ClInclude Include="src\Callbacks\Callbacks.h" />
     <ClInclude Include="src\Common\UniqueID.h" />
     <ClInclude Include="src\Bvh\Bvh.h" />
-    <ClInclude Include="src\Game\AStarMap.h" />
+    <ClInclude Include="src\Pathfinding\AStarMap.h" />
     <ClInclude Include="src\Game\Enemies\Kangaroo\Kangaroo.h" />
+    <ClInclude Include="src\Pathfinding\AStar.h" />
+    <ClInclude Include="src\Pathfinding\Cell.h" />
+    <ClInclude Include="src\Pathfinding\MinHeap.h" />
+    <ClInclude Include="src\Pathfinding\Pathfinding.h" />
     <ClInclude Include="src\Types\Effects\VolumetricBloodSplatter.h" />
     <ClInclude Include="src\Game\Allies\Mermaid\Mermaid.h" />
     <ClInclude Include="src\Game\Enemies\Shark\Shark.h" />
